BUG- resolved issues on form with text area not responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@
 
 .black-box {
     background: rgb(42,38,0);
-    background: linear-gradient(180deg, rgba(42,38,0,1) 0%, rgba(42,38,0,0.5) 65%, rgba(42,38,0,0) 100%);
+    background: linear-gradient(180deg, rgba(42,38,0,1) 0%, rgba(42,38,0,0.5) 85%, rgba(42,38,0,0) 100%);
   }
 
 /* --------------------headings--------------------*/
@@ -49,8 +49,8 @@
  }
  .loc-text-pricing {
     display:inline-block;
-    padding-left: 15px;
-    padding-right:15px; 
+    margin-left: 20px;
+    margin-right: 20px; 
     font-size: 1.5em;
     color: #bfd8bdff;
     font-weight: 500;
@@ -63,6 +63,13 @@
     color: #2a2600ff;
     font-weight: 300;
  }
+ .loc-text-textfield {
+    display:inline-block;
+    font-size: 1.0em;
+    color: #2a2600ff;
+    font-weight: 300;
+ }
+ 
 
 .black-box-form {
     background: rgb(42,38,0);
